Demo3/3.mongo-deployment-config.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployment
  labels: 
   app: mongodb
spec:
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb
        image: mongo
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
spec:
  selector:
    app: mongodb
  type: ClusterIP
  ports:
    - protocol:  TCP
      port: 27017
      targetPort: 27017
