Demo3/4.mongo-express-deployment-config.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-expressmyapp
  labels:
    app: mongo-express
spec:
  selector:
    matchLabels:
      app: mongo-express
  template:
    metadata:
      labels:
        app: mongo-express
    spec:
      containers:
      - name: mongo-express
        image: mongo-express
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-express-service
spec:
  selector:
    app: mongodb
  type: LoadBalancer
  ports:
    - protocol:  TCP
      port: 8081
      targetPort: 8081
      nodePort: 31000
